Add permissions required message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="view">View</string>
+
+    <string name="message_permissions_required">Storage permissions is required to fetch stories</string>
 </resources>
