--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="view">View</string>
+    <string name="delete">Delete</string>
 
     <string name="message_permissions_required">Storage permissions is required to fetch stories</string>
 </resources>
